--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="story.html">Story</a>
         <a href="food.html">Food</a>
-        <a href="attraction.html">Attraction</a>
+        <a href="index.html">Attraction</a>
         <a href="map.html">Map</a>
         <a href="contact.html">Contact</a>
     </nav>
@@ -355,7 +355,7 @@
                 </p>
                 <p>
                     Bukit Jokowi has become a popular tourist destination in Wamena, attracting both domestic and international visitors who come to admire the stunning vistas and experience the tranquility of the Papuan countryside. 
-                    The hill offers opportunities for photography, nature walks, and relaxation, making it a must-visit attraction for travelers exploring the diverse landscapes of Papua province.
+                    The hill offers opportunities for photography, nature walks, and relaxation, making it a must-visit index for travelers exploring the diverse landscapes of Papua province.
                 </p>
             </div>
             <div class="mySlides7">
