--- a/story.html
+++ b/story.html
@@ -149,7 +149,7 @@
     <nav>
         <a href="story.html">Story</a>
         <a href="food.html">Food</a>
-        <a href="attraction.html">Attraction</a>
+        <a href="index.html">Attraction</a>
         <a href="map.html">Map</a>
         <a href="contact.html">Contact</a>
     </nav>
